--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+     "predeploy": "npm run build",
+  "deploy": "gh-pages -d build",
+    "preview": "vite preview",
+    "homepage":"https://aditya11011.github.io/Hogwarts-Quiz"
   },
   "dependencies": {
     "react": "^18.3.1",
