--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://aditya11011.github.io/HogwartsQuiz/",
+
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
      "predeploy": "npm run build",
   "deploy": "gh-pages -d build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "eject": "react-scripts eject"
+    
     
   },
   "dependencies": {
