fix: update homepage and base path for consistency in package.json and vite.config.js

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://aditya11011.github.io/HogwartsQuiz/",
+  "homepage": "https://aditya11011.github.io/Hogwarts-Quiz/",
 
   "scripts": {
     "dev": "vite",
