set private to false

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hogwarts",
-  "private": true,
+  "private": false,
   "version": "0.0.0",
   "type": "module",
   "homepage": "https://aditya11011.github.io/Hogwarts-Quiz/",
